--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                   <p>After Effects</p>
                 </div>
                 <div class="col-lg-6 col-sm-12">
-                  <p>Adobe Premier</p>
+                  <p>Adobe Premiere</p>
                 </div>
                 <div class="col-lg-6 col-sm-12">
                   <p>3ds Max</p>
@@ -301,6 +301,7 @@
                   <li>PHP</li>
                   <li>phpMyAdmin</li>
                   <li>SQL</li>
+                  <li>Adobe tools (Photoshop, Illustrator, Lightroom, Premiere, XD, After Effects)</li>
                 </ul>
               </div>
               <div class="col-lg-4 col-md-0 col-sm-0"></div>
