--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
         </div>
         <div class="container">
           <div class="card-title">
-            <h2 id="name">Sofia Pia</h2>
-            <p id="message"></p>
+            <h2 id="message">Sofia Pia</h2>
           </div>
           <div class="card-body">
             <p><i class="fas fa-home icon"></i>Barreiro, Portugal</p>
